--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,12 @@
   </head>
 
   <body>
-    <a class="text-decoration-none" href="/users/sign_in">Sign in</a> |
-    <a class="text-decoration-none" data-method="delete" href="/users/sign_out">Sign out</a>
+    <% if user_signed_in? %>
+      Hello <%= current_user.username %>
+      <%= button_to "Sign out", destroy_user_session_path, :method => :delete, :class => "btn btn-link text-decoration-none pl-0" %>
+    <% else %>
+      <%= button_to "Sign in", new_user_session_path, :class => "btn btn-link text-decoration-none pl-0" %>
+    <% end %>
 
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
