Add bootstrap styles

--- a/app/views/technologies/show.html.erb
+++ b/app/views/technologies/show.html.erb
@@ -1,1 +1,13 @@
-<h1>Technology</h1>
+<div class="container">
+  <h1>technology.name.capitalize</h1>
+
+  <p>
+    technology.description
+  </p>
+
+  <div class="container p-0 mt-5 mb-5 border rounded p-3">
+    <h5 class="text-muted mt-3 mb-3">
+      <%= @article.purpose %>:
+    </h5>
+  </div>
+</div>
