--- a/app/views/technologies/index.html.erb
+++ b/app/views/technologies/index.html.erb
@@ -1,1 +1,23 @@
-<h1>Technologies</h1>
+<div class="container">
+  <h1>Technologies</h1>
+
+  <% @technologies.each do |technology| %>
+    <div class="container mt-5">
+      <h4>
+        <% technology.name %>
+      </h4>
+      <div class="class p-2 border rounded">
+        <% technology.purpose %>
+        <% technology.description %>
+        <% technology.popularity %>
+      </div>
+      <div class="container mt-4">
+        <div class="row">
+          <%= link_to 'Show', technology_path(technology), :class => "btn btn-primary btn-sm mr-2" %>
+          <%= link_to 'Edit', edit_technology_path(technology), :class => "btn btn-primary btn-sm mr-2" %>
+          <%= button_to 'Delete', technology_path(technology), method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-primary btn-sm" %>
+        </div>
+      </div>
+    </div>
+  <% end %>
+</div>
