--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,31 +1,33 @@
-<div class="container">
-  <h2>Change your password</h2>
-</div>
+<div class="container col-md-8">
+  <div class="container">
+    <h2>Change your password</h2>
+  </div>
 
-<div class="container">
-  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource, :class => "text-decoration-none" %>
-    <%= f.hidden_field :reset_password_token %>
+  <div class="container">
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource, :class => "text-decoration-none" %>
+      <%= f.hidden_field :reset_password_token %>
 
-    <div class="field form-group">
-      <%= f.label :password, "New password" %><br />
-      <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-      <% end %>
-      <%= f.password_field :password, autofocus: true, autocomplete: "new-password", :class => 'form-control' %>
-    </div>
+      <div class="field form-group">
+        <%= f.label :password, "New password" %><br />
+        <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+        <% end %>
+        <%= f.password_field :password, autofocus: true, autocomplete: "new-password", :class => 'form-control' %>
+      </div>
 
-    <div class="field form-group">
-      <%= f.label :password_confirmation, "Confirm new password" %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", :class => 'form-control' %>
-    </div>
+      <div class="field form-group">
+        <%= f.label :password_confirmation, "Confirm new password" %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", :class => 'form-control' %>
+      </div>
 
-    <div class="actions form-group">
-      <%= f.submit "Change my password", :class => 'btn btn-primary' %>
-    </div>
-  <% end %>
-</div>
+      <div class="actions form-group">
+        <%= f.submit "Change my password", :class => 'btn btn-primary' %>
+      </div>
+    <% end %>
+  </div>
 
-<div class="container">
-  <%= render "devise/shared/links", :class => "text-decoration-none" %>
+  <div class="container">
+    <%= render "devise/shared/links", :class => "text-decoration-none" %>
+  </div>
 </div>
