--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,22 +1,24 @@
-<div class="container">
-  <h2>Forgot your password?</h2>
-</div>
+<div class="container col-md-8">
+  <div class="container">
+    <h2>Forgot your password?</h2>
+  </div>
 
-<div class="container">
-  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource, :class => "text-decoration-none" %>
+  <div class="container">
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource, :class => "text-decoration-none" %>
 
-    <div class="field form-group">
-      <%= f.label :email %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", :class => 'form-control' %>
-    </div>
+      <div class="field form-group">
+        <%= f.label :email %><br />
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", :class => 'form-control' %>
+      </div>
 
-    <div class="actions form-group">
-      <%= f.submit "Send me reset password instructions", :class => 'btn btn-primary' %>
-    </div>
-  <% end %>
-</div>
+      <div class="actions form-group">
+        <%= f.submit "Send me reset password instructions", :class => 'btn btn-primary' %>
+      </div>
+    <% end %>
+  </div>
 
-<div class="container">
-  <%= render "devise/shared/links", :class => "text-decoration-none" %>
+  <div class="container">
+    <%= render "devise/shared/links", :class => "text-decoration-none" %>
+  </div>
 </div>
