--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,40 +1,42 @@
-<div class="container mb-3">
-  <h2>Sign up</h2>
-</div>
+<div class="container col-md-8">
+  <div class="container mb-3">
+    <h2>Sign up</h2>
+  </div>
 
-<div class="container">
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource, :class => "text-decoration-none" %>
+  <div class="container">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource, :class => "text-decoration-none" %>
 
-    <div class="field form-group">
-      <%= f.label :email %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", :class => 'form-control' %>
-    </div>
+      <div class="field form-group">
+        <%= f.label :email %><br />
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", :class => 'form-control' %>
+      </div>
 
-    <div class="field form-group">
-      <%= f.label :username %><br />
-      <%= f.text_field :username, :class => 'form-control' %>
-    </div>
+      <div class="field form-group">
+        <%= f.label :username %><br />
+        <%= f.text_field :username, :class => 'form-control' %>
+      </div>
 
-    <div class="field form-group">
-      <%= f.label :password %>
-      <% if @minimum_password_length %>
-      <em class="text-muted">(<%= @minimum_password_length %> characters minimum)</em>
-      <% end %><br />
-      <%= f.password_field :password, autocomplete: "new-password", :class => 'form-control' %>
-    </div>
+      <div class="field form-group">
+        <%= f.label :password %>
+        <% if @minimum_password_length %>
+        <em class="text-muted">(<%= @minimum_password_length %> characters minimum)</em>
+        <% end %><br />
+        <%= f.password_field :password, autocomplete: "new-password", :class => 'form-control' %>
+      </div>
 
-    <div class="field form-group">
-      <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", :class => 'form-control' %>
-    </div>
+      <div class="field form-group">
+        <%= f.label :password_confirmation %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", :class => 'form-control' %>
+      </div>
 
-    <div class="actions form-group">
-      <%= f.submit "Sign up", :class => 'btn btn-primary' %>
-    </div>
-  <% end %>
-</div>
+      <div class="actions form-group">
+        <%= f.submit "Sign up", :class => 'btn btn-primary' %>
+      </div>
+    <% end %>
+  </div>
 
-<div class="container mt-3">
-  <%= render "devise/shared/links", :class => "text-decoration-none" %>
+  <div class="container mt-3">
+    <%= render "devise/shared/links", :class => "text-decoration-none" %>
+  </div>
 </div>
