--- a/app/views/technologies/index.html.erb
+++ b/app/views/technologies/index.html.erb
@@ -1,6 +1,8 @@
 <div class="container">
-  <h1>Technologies</h1>
-
+  <div>
+    <h1>Technologies</h1>
+  </div>
+  
   <% @technologies.each do |technology| %>
     <div class="container mt-5">
       <h4>
