--- a/app/views/technologies/index.html.erb
+++ b/app/views/technologies/index.html.erb
@@ -2,16 +2,28 @@
   <div>
     <h1>Technologies</h1>
   </div>
-  
+
   <% @technologies.each do |technology| %>
-    <div class="container mt-5">
-      <h4>
-        <% technology.name %>
-      </h4>
-      <div class="class p-2 border rounded">
-        <% technology.purpose %>
-        <% technology.description %>
-        <% technology.popularity %>
+    <div class="container mt-5 border rounded p-3">
+      <div class="">
+        <h4>
+          <%= technology.name %>
+        </h4>
+        <small class="text-muted">
+          <%= technology.purpose %>
+        </small>
+      </div>
+      
+      <hr>
+      <div class="">
+        <%= technology.description %>
+      </div>
+      <hr>
+
+      <div class="">
+        <small class="text-muted">
+          Technology rating: <%= technology.popularity %>
+        </small>
       </div>
       <div class="container mt-4">
         <div class="row">
